--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </div>
   <br />
   <div class='Text'>
+    <p>Lester J. Clark C# Assemblies</p>
     <p>
       The LJC Libraries, Utilities and Application source code is in GitHub at
       <a href="https://github.com/ljlclark/LJCProjects">LJCProjects</a>
