--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     <p>Lester J. Clark C# Assemblies</p>
     <p>
       The LJC Libraries, Utilities and Application source code is in GitHub at
-      <a href="https://github.com/ljlclark/LJCProjects">LJCProjects</a>
+      <a href="https://github.com/ljlclark/LJCProjects">LJC C# Projects</a>
     </p>
     <p>
       The Technical HTML Documentation is at
-      <a href="https://ljlclark.github.io/LJCCodeDoc/">LJCCodeDoc</a>
+      <a href="https://ljlclark.github.io/LJCCodeDoc/">LJC C# CodeDoc</a>
+    </p>
+    <p>
+      The Database Diagrams Documentation is at
+      <a href="https://ljlclark.github.io/LJCDBDiagrams/">LJC DB Diagrams</a>
     </p>
     <p>
       The LJC Libraries, Utilities and Applications are a set of .NET Assemblies
