--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
       them from other potentially similar named items and help prevent naming conflicts.
     </p>
   </div>
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022</div>
-  <div class='SmallText'>All Rights Reserved</div>
+  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 All Rights Reserved</div>
 </body>
 </html>
