Update index Page

--- a/index.html
+++ b/index.html
@@ -11,59 +11,59 @@
   <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>LJC Assemblies</div>
-  </div>
-  <br />
-  <div class='Text'>
-    <p>Lester J. Clark C# Assemblies</p>
-    <p>
-      The LJC Libraries, Utilities and Application source code is in GitHub at
-      <a href="https://github.com/ljlclark/LJCProjects">LJC C# Projects</a>
-    </p>
-    <p>
-      The Technical HTML Documentation is at
-      <a href="https://ljlclark.github.io/LJCCodeDoc/">LJC C# CodeDoc</a>
-    </p>
-    <p>
-      The Database Diagrams Documentation is at
-      <a href="https://ljlclark.github.io/LJCDBDiagrams/">LJC DB Diagrams</a>
-    </p>
-    <p>
-      The LJC Libraries, Utilities and Applications are a set of .NET Assemblies
-      that were developed to work together with the following objectives:
-    </p>
-    <ol>
-      <li>Shorten the development time for building .NET Business Database Applications.</li>
-      <li>
-        Provide consistant, reusable code designed to emphasize readability and
-        simplified maintenance.
-      </li>
-      <li>Provide a powerful and flexible set of database libraries.</li>
-    </ol>
-    <p>
-      The Database Libraries were designed to support the following features:
-    </p>
-    <ol>
-      <li>
-        Provide consistant, reusable code that simplifies database access and
-        encapsulates database access best practices.
-      </li>
-      <li>
-        Switch between the SQL Client, ODBC, OLEDB and MySQL data providers with only
-        configuration file changes.
-      </li>
-      <li>
-        Scale between Client/Server, Local Message Based, Remote Data Service
-        or Web Data Service data access with only configuration changes.
-      </li>
-    </ol>
-    <p>
-      Most LJC Solutions, Projects and output files are prefixed with "LJC" to distinguish
-      them from other potentially similar named items and help prevent naming conflicts.
-    </p>
-  </div>
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
-</body>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>LJC Assemblies</div>
+    </div>
+    <br />
+    <div class='Text'>
+      <p>Lester J. Clark C# Assemblies</p>
+      <p>
+        The LJC Libraries, Utilities and Application source code is in GitHub at
+        <a href="https://github.com/ljlclark/LJCProjects">LJC C# Projects</a>
+      </p>
+      <p>
+        The Technical HTML Documentation is at
+        <a href="https://ljlclark.github.io/LJCCodeDoc/">LJC C# CodeDoc</a>
+      </p>
+      <p>
+        The Database Diagrams Documentation is at
+        <a href="https://ljlclark.github.io/LJCDBDiagrams/">LJC DB Diagrams</a>
+      </p>
+      <p>
+        The LJC Libraries, Utilities and Applications are a set of .NET Assemblies
+        that were developed to work together with the following objectives:
+      </p>
+      <ol>
+        <li>Shorten the development time for building .NET Business Database Applications.</li>
+        <li>
+          Provide consistant, reusable code designed to emphasize readability and
+          simplified maintenance.
+        </li>
+        <li>Provide a powerful and flexible set of database libraries.</li>
+      </ol>
+      <p>
+        The Database Libraries were designed to support the following features:
+      </p>
+      <ol>
+        <li>
+          Provide consistant, reusable code that simplifies database access and
+          encapsulates database access best practices.
+        </li>
+        <li>
+          Switch between the SQL Client, ODBC, OLEDB and MySQL data providers with only
+          configuration file changes.
+        </li>
+        <li>
+          Scale between Client/Server, Local Message Based, Remote Data Service
+          or Web Data Service data access with only configuration changes.
+        </li>
+      </ol>
+      <p>
+        Most LJC Solutions, Projects and output files are prefixed with "LJC" to distinguish
+        them from other potentially similar named items and help prevent naming conflicts.
+      </p>
+    </div>
+  </div></body>
 </html>
