--- a/LJCDBMessage/LJCDBMessage/Diagrams/DbRequestResult.html
+++ b/LJCDBMessage/LJCDBMessage/Diagrams/DbRequestResult.html
@@ -5,16 +5,17 @@
   <meta charset='utf-8' />
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
-  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>DbResult Classes</div>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>DbResult Classes</div>
+    </div>
+    <br />
+    <img alt="" src="DbResult.jpg" width="550" />
+    <br />
   </div>
-  <br />
-  <img alt="" src="DbResult.jpg" width="550" />
-  <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
 </body>
 </html>
