--- a/LJCDocLib/LJCDocGenLib/Diagrams/GenPropertyToField.html
+++ b/LJCDocLib/LJCDocGenLib/Diagrams/GenPropertyToField.html
@@ -6,16 +6,17 @@
   <meta charset='utf-8' />
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width, initial -scale=1' />
-  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>GenProperty and GenField Classes</div>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>GenProperty and GenField Classes</div>
+    </div>
+    <br />
+    <img src="GenPropertyToField.jpg" width="600" />
+    <br />
   </div>
-  <br />
-  <img src="GenPropertyToField.jpg" width="600" />
-  <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
 </body>
 </html>
