--- a/LJCDBClientLib/LJCDBClientLib/Diagrams/DataMethods.html
+++ b/LJCDBClientLib/LJCDBClientLib/Diagrams/DataMethods.html
@@ -7,16 +7,17 @@
   <meta charset='utf-8' />
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
-  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>Manager Data Methods</div>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>Manager Data Methods</div>
+    </div>
+    <br />
+    <img src="DataMethods.jpg" width="275" />
+    <br />
   </div>
-  <br />
-  <img src="DataMethods.jpg" width="275" />
-  <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
 </body>
 </html>
