--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
         them from other potentially similar named items and help prevent naming conflicts.
       </p>
     </div>
-  </div></body>
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
+  </div>
+</body>
 </html>
