--- a/LJCRegionManager/LJCRegionManager/LinkPages/RegionTables.html
+++ b/LJCRegionManager/LJCRegionManager/LinkPages/RegionTables.html
@@ -5,17 +5,18 @@
   <meta charset='utf-8' />
   <meta name='author' content='Les Clark' />
   <meta name='viewport' content='width=device-width, initial -scale=1' />
-  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>Region Tables</div>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>Region Tables</div>
+    </div>
+    <br />
+    <img src="RegionTables.jpg" width="450" />
+    <br />
+    <br />
   </div>
-  <br />
-  <img src="RegionTables.jpg" width="450" />
-  <br />
-  <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
 </body>
 </html>
