--- a/LJCGenText/LJCGenTextLib/Diagrams/GenTextLib.html
+++ b/LJCGenText/LJCGenTextLib/Diagrams/GenTextLib.html
@@ -7,16 +7,17 @@
   <meta charset='utf-8' />
   <meta name='author' content='Les Clark' />
   <meta name='viewport' content='width=device-width, initial -scale=1' />
-  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>GenTextLib Classes</div>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>GenTextLib Classes</div>
+    </div>
+    <br />
+    <img src="GenTextLib.jpg" width="650" />
+    <br />
   </div>
-  <br />
-  <img src="GenTextLib.jpg" width="650" />
-  <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
 </body>
 </html>
