--- a/LJCViewEditor/LJCViewEditor/LinkPages/ViewJoin.html
+++ b/LJCViewEditor/LJCViewEditor/LinkPages/ViewJoin.html
@@ -5,16 +5,19 @@
   <meta charset='utf-8' />
   <meta name='author' content='Les Clark' />
   <meta name='viewport' content='width=device-width, initial -scale=1' />
-  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <br />
-  <div id='Header'>
-    <div id='Title'>View Join Tables</div>
+  <div class="page">
+    <br />
+    <div id='Header'>
+      <div id='Title'>View Join Tables</div>
+    </div>
+    <br />
+    <img src="ViewJoin.jpg" width="650" />
+    <br />
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
-  <br />
-  <img src="ViewJoin.jpg" width="650" />
-  <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
 </body>
 </html>
