--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- Copyright(c) Lester J. Clark 2021,2022 - All Rights Reserved -->
+<!-- Copyright (c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
   <title>LJC Assemblies</title>
