--- a/LJCDataAccess/LJCDataAccess/Diagrams/DataAccessLink.html
+++ b/LJCDataAccess/LJCDataAccess/Diagrams/DataAccessLink.html
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html>
-<!-- Copyright(c) Lester J. Clark 2021,2022 - All Rights Reserved -->
+<!-- Copyright(c) Lester J.Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- DataAccessLink.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
   <title>Data Access Classes</title>
