--- a/LJCDBClientLib/LJCDBClientLib/Diagrams/DataMethods.html
+++ b/LJCDBClientLib/LJCDBClientLib/Diagrams/DataMethods.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
-<!-- Copyright (c) Lester J. Clark 2021,2022 - All Rights Reserved -->
+<!-- Copyright(c) Lester J.Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
 <!-- DataMethods.xml -->
 <head>
   <title>Manager Data Methods</title>
