--- a/LJCDBDataAccess/LJCDBDataAccess/Diagrams/DbAccessConfig.html
+++ b/LJCDBDataAccess/LJCDBDataAccess/Diagrams/DbAccessConfig.html
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
+<!-- Copyright(c) Lester J.Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- DbAccessConfig.html -->
 <head>
   <title>Message Data Access Config</title>
   <meta charset='utf-8' />
