--- a/LJCDBMessage/LJCDBMessage/Diagrams/DbRequestJoin.html
+++ b/LJCDBMessage/LJCDBMessage/Diagrams/DbRequestJoin.html
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html>
-<!-- Copyright (c) Lester J. Clark 2021,2022 - All Rights Reserved -->
+<!-- Copyright(c) Lester J.Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- DbRequestJoin.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
   <title>DbRequest, Join and Filter Classes</title>
