--- a/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/GenTextEditor.html
+++ b/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/GenTextEditor.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2021 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- GenTextEditor.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -24,7 +25,10 @@
   <p>
     The Data Item Lists are on the Data Tab.
   </p>
-  <h6>GenTextEditor</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    GenTextEditor<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
