--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/DataConfig.html
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/DataConfig.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2021 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- DataConfig.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -25,20 +26,20 @@
 <span class="ltgt">&lt;</span>?<span class="name">xml</span> <span class="attrib">version</span>="<span class="data">1.0</span>" <span class="attrib">encoding</span>="<span class="data">utf-8</span>" ?<span class="ltgt">&gt;</span>
 <span class="ltgt">&lt;</span><span class="name">DataConfigs</span> xmlns:xsi="<span class="data">http://www.w3.org/2001/XMLSchema-instance</span>"
    xmlns:xsd="<span class="data">http://www.w3.org/2001/XMLSchema</span>"<span class="ltgt">&gt;</span>
-    <span class="ltgt">&lt;</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">Name</span><span class="ltgt">&gt;</span>ConfigName<span class="ltgt">&lt;/</span><span class="name">Name</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>DBServer\Instance<span class="ltgt">&lt;/</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">Database</span><span class="ltgt">&gt;</span>DatabaseName<span class="ltgt">&lt;/</span><span class="name">Database</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>SqlServer<span class="ltgt">&lt;/</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>
-    <span class="ltgt">&lt;/</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
-    <span class="ltgt">&lt;</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">Name</span><span class="ltgt">&gt;</span>MySQLConfigName<span class="ltgt">&lt;/</span><span class="name">Name</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>LocalHost<span class="ltgt">&lt;/</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">Database</span><span class="ltgt">&gt;</span>DatabaseName<span class="ltgt">&lt;/</span><span class="name">Database</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>MySql<span class="ltgt">&lt;/</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">UserID</span><span class="ltgt">&gt;</span>root<span class="ltgt">&lt;/</span><span class="name">UserID</span><span class="ltgt">&gt;</span>
-      <span class="ltgt">&lt;</span><span class="name">Pswd</span><span class="ltgt">&gt;</span>Password<span class="ltgt">&lt;/</span><span class="name">Pswd</span><span class="ltgt">&gt;</span>
-    <span class="ltgt">&lt;/</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
+  <span class="ltgt">&lt;</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">Name</span><span class="ltgt">&gt;</span>ConfigName<span class="ltgt">&lt;/</span><span class="name">Name</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>DBServer\Instance<span class="ltgt">&lt;/</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">Database</span><span class="ltgt">&gt;</span>DatabaseName<span class="ltgt">&lt;/</span><span class="name">Database</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>SqlServer<span class="ltgt">&lt;/</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>
+  <span class="ltgt">&lt;/</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
+  <span class="ltgt">&lt;</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">Name</span><span class="ltgt">&gt;</span>MySQLConfigName<span class="ltgt">&lt;/</span><span class="name">Name</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>LocalHost<span class="ltgt">&lt;/</span><span class="name">DbServer</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">Database</span><span class="ltgt">&gt;</span>DatabaseName<span class="ltgt">&lt;/</span><span class="name">Database</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>MySql<span class="ltgt">&lt;/</span><span class="name">ConnectionTypeName</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">UserID</span><span class="ltgt">&gt;</span>root<span class="ltgt">&lt;/</span><span class="name">UserID</span><span class="ltgt">&gt;</span>
+    <span class="ltgt">&lt;</span><span class="name">Pswd</span><span class="ltgt">&gt;</span>Password<span class="ltgt">&lt;/</span><span class="name">Pswd</span><span class="ltgt">&gt;</span>
+  <span class="ltgt">&lt;/</span><span class="name">DataConfig</span><span class="ltgt">&gt;</span>
 <span class="ltgt">&lt;/</span><span class="name">DataConfigs</span><span class="ltgt">&gt;</span></pre>
 
   <h3>Context Menu</h3>
@@ -50,7 +51,10 @@
   <p>
     Displays the context sensitive Help Page.
   </p>
-  <h6>DataConfig</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    DataConfig<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
