--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Filter/ConditionList.html
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Filter/ConditionList.html
@@ -1,9 +1,11 @@
 ﻿<!DOCTYPE html>
-
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- ConditionList.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>Condition List</title>
+  <meta charset="utf-8" />
+  <title>Condition List</title>
 </head>
 <body>
   <h3 style="color:blue">Condition List</h3>
@@ -50,7 +52,10 @@
   <p>
     Displays the context sensitive Help Page.
   </p>
-  <h6>ConditionList</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    ConditionList<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
