--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Join/JoinColumnDetail.html
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Join/JoinColumnDetail.html
@@ -1,9 +1,11 @@
 ﻿<!DOCTYPE html>
-
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- JoinColumnDetail.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>JoinColumn Detail</title>
+  <meta charset="utf-8" />
+  <title>JoinColumn Detail</title>
 </head>
 <body>
   <h3 style="color:blue">Join Column Detail Dialog</h3>
@@ -64,7 +66,10 @@
   <p>
     Displays the context sensitive Help Page.
   </p>
-  <h6>JoinColumnDetail</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    JoinColumnDetail<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
