--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Join/JoinOnDetail.html
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Join/JoinOnDetail.html
@@ -1,9 +1,11 @@
 ﻿<!DOCTYPE html>
-
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- JoinOnDetail.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>JoinOn Detail</title>
+  <meta charset="utf-8" />
+  <title>JoinOn Detail</title>
 </head>
 <body>
   <h3 style="color:blue">JoinOn Detail Dialog</h3>
@@ -59,7 +61,10 @@
   <p>
     Displays the context sensitive Help Page.
   </p>
-  <h6>JoinOnDetail</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    JoinOnDetail<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
