--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Join/JoinOnList.html
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/Help/Join/JoinOnList.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2021 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- JoinOnList.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -50,7 +51,10 @@
   <p>
     Displays the context sensitive Help Page.
   </p>
-  <h6>JoinOnList</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    JoinOnList<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
