--- a/CoreUtilities/LJCDocLib/LJCDocGenLib/Diagrams/GenRootToMethod.html
+++ b/CoreUtilities/LJCDocLib/LJCDocGenLib/Diagrams/GenRootToMethod.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html>
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
 <!-- GenRootToMethod.htm -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
