--- a/CoreUtilities/LJCDocLib/LJCDocXMLObjLib/Diagrams/DocXML.html
+++ b/CoreUtilities/LJCDocLib/LJCDocXMLObjLib/Diagrams/DocXML.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html>
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
 <!-- DocXML.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
