--- a/SampleApps/CVRManager/CVRManager/Help/CVVisit/CalendarDialog.html
+++ b/SampleApps/CVRManager/CVRManager/Help/CVVisit/CalendarDialog.html
@@ -1,9 +1,11 @@
 ﻿<!DOCTYPE html>
-
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- CalendarDialog.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>Calendar Dialog</title>
+  <meta charset="utf-8" />
+  <title>Calendar Dialog</title>
 </head>
 <body>
   <h3 style="color:blue">Calendar Dialog</h3>
@@ -15,7 +17,10 @@
     A date is selected from the Calendar Dialog by double clicking on a date
     value or selecting a date value and pressing the ENTER key.
   </p>
-  <h6>CalendarDialog.html</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    CalendarDialog<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
