--- a/SampleApps/CVRManager/CVRManager/Help/Facility/FacilityListPic.html
+++ b/SampleApps/CVRManager/CVRManager/Help/Facility/FacilityListPic.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- FacilityListPic.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -15,7 +16,10 @@
   <p>
     <img src="FacilityListPic.jpg" width="400" />
   </p>
-  <h6>FacilityListPic</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    FacilityListPic<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
