--- a/SampleApps/CVRManager/CVRManager/Help/CVPerson/CVPersonList.html
+++ b/SampleApps/CVRManager/CVRManager/Help/CVPerson/CVPersonList.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- CVPersonList.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -117,7 +118,10 @@
   <p>
     The 'Help' menu item displays the help page for the current list.
   </p>
-  <h6>CVPersonList</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    CVPersonList<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
