--- a/SampleApps/CVRManager/CVRManager/Help/CVRManager.html
+++ b/SampleApps/CVRManager/CVRManager/Help/CVRManager.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- CVRManager.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -12,7 +13,10 @@
     The Contact Visit Record Manager tracks contact visits to a facility. This
     data can be used for contact tracing and reporting.
   </p>
-  <h6>CVRManager</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    CVRManager<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
