--- a/SampleApps/CVRManager/CVRManager/Help/CVVisit/CVVisitDetail.html
+++ b/SampleApps/CVRManager/CVRManager/Help/CVVisit/CVVisitDetail.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- CVVisitDetail.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -88,7 +89,10 @@
   <p>
     The 'Help' menu item displays the help page for the current dialog.
   </p>
-  <h6>CVVisitDetail</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    CVVisitDetail<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
