--- a/SampleApps/LJCRegionManager/LJCRegionManager/Help/CitySection/CitySectionDetail.html
+++ b/SampleApps/LJCRegionManager/LJCRegionManager/Help/CitySection/CitySectionDetail.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- CitySectionDetail.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -42,7 +43,10 @@
   <p>
     Exits the dialog without saving the entered data.
   </p>
-  <h6>CitySectionDetail</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    CitySectionDetail<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
