--- a/SampleApps/LJCRegionManager/LJCRegionManager/Help/CitySection/CitySectionList.html
+++ b/SampleApps/LJCRegionManager/LJCRegionManager/Help/CitySection/CitySectionList.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- CitySectionList.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -97,7 +98,10 @@
   <p>
     The 'Close' menu item closes the window and exits the application.
   </p>
-  <h6>CitySectionList</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    CitySectionList<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
