--- a/SampleApps/LJCRegionManager/LJCRegionManager/Help/LJCRegionManager.html
+++ b/SampleApps/LJCRegionManager/LJCRegionManager/Help/LJCRegionManager.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2020 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- LJCRegionManager.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -12,7 +13,10 @@
     The Region Manager contains Region, Province, City and City Section data.
     In the Philippines, City Sections are known as Barangays.
   </p>
-  <h6>LJCRegionManager</h6>
-  <h6>Copyright © Lester J Clark 2020</h6>
+  <h6>
+    LJCRegionManager<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
