--- a/SampleApps/LJCUnitMeasure/LJCUnitMeasure/Help/Help/UnitCategoryDropdown.html
+++ b/SampleApps/LJCUnitMeasure/LJCUnitMeasure/Help/Help/UnitCategoryDropdown.html
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- UnitSystemDropdown.html -->
+<!-- UnitCategoryDropDown.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
-  <title>Unit System Dropdown List</title>
+  <title>Unit Category Dropdown List</title>
 </head>
 <body>
-  <h3 style="color:blue">Unit System Dropdown List</h3>
+  <h3 style="color:blue">Unit Category Dropdown List</h3>
   <p>
-    A Unit System is a definition such as "US Customary" and "Metric". It
-    contains Unit Measure items specific to that system.
+    A Unit Category seperates the Unit Measures into separate categories such
+    as "Weight", "Volume" and "Length".
   </p>
 
   <h3>Context Menu</h3>
@@ -28,14 +28,14 @@
   <b>New</b>
   <p>
     The 'New' menu item displays the
-    <a href="UnitSystemDetail.html">Unit System Detail</a> dialog to allow for
-    the creation of a new Unit System entry.
+    <a href="UnitCategoryDetail.html">Unit Category Detail</a> dialog to allow
+    for the creation of a new Unit System entry.
   </p>
   <b>Edit</b>
   <p>
     The 'Edit' menu item displays the
-    <a href="UnitSytemDetail.html">Unit System Detail</a> dialog to allow for
-    editing the selected list item.
+    <a href="UnitCategoryDetail.html">Unit Category Detail</a> dialog to allow
+    for editing the selected list item.
   </p>
   <b>Delete</b>
   <p>
@@ -48,13 +48,13 @@
   <b>Export Text</b>
   <p>
     The 'Export Text' menu item creates a tab delimited text file with the file
-    name 'ExportFiles\UnitSystem.doc'. It attempts to display the data with the
+    name 'ExportFiles\UnitCategory.doc'. It attempts to display the data with the
     application that is associated with the '.doc' extension.
   </p>
   <b>Export CSV</b>
   <p>
     The 'Export CSV' menu item creates a comma delimited text file with the file
-    name 'ExportFiles\UnitSystem.csv'. It attempts to display the data with the
+    name 'ExportFiles\UnitCategory.csv'. It attempts to display the data with the
     application that is associated with the '.csv' extension.
   </p>
   <b>Exit</b>
@@ -66,7 +66,7 @@
     The 'Help' menu item displays the help page for the current list.
   </p>
   <h6>
-    UnitSystemDropdown<br />
+    UnitCategoryDropdown<br />
     Copyright © Lester J Clark and Contributors.<br />
     Licensed under the MIT License.
   </h6>
