--- a/CoreUtilities/LJCDocLib/Common/ListD.html
+++ b/CoreUtilities/LJCDocLib/Common/ListD.html
@@ -1,5 +1,6 @@
 ﻿<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<!-- Copyright (c) Lester J. Clark 2021,2022 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
 <!-- ListD.html -->
 <head>
 	<meta charset="utf-8" />
@@ -19,6 +20,10 @@
 		This is especially true if the form contains more than one grid.
 	</div>
 	<br />
-	<div class='SmallText'>Copyright (C) Lester J. Clark 2017-2019 - All Rights Reserved</div>
+	<div class='SmallText'>
+		ListD<br />
+		Copyright © Lester J Clark and Contributors.<br />
+		Licensed under the MIT License.
+	</div>
 </body>
 </html>
