--- a/CoreUtilities/LJCDocLib/Common/ListW.html
+++ b/CoreUtilities/LJCDocLib/Common/ListW.html
@@ -1,5 +1,7 @@
 ﻿<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<!-- Copyright (c) Lester J. Clark 2021,2022 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- ListW.xml -->
 <!-- ListW.html -->
 <head>
 	<meta charset="utf-8" />
@@ -52,6 +54,10 @@
 		ListChange() methods.
 	</div>
 	<br />
-	<div class='SmallText'>Copyright (C) Lester J. Clark 2017-2019 - All Rights Reserved</div>
+	<div class='SmallText'>
+		ListW<br />
+		Copyright © Lester J Clark and Contributors.<br />
+		Licensed under the MIT License.
+	</div>
 </body>
 </html>
