--- a/CoreUtilities/LJCDocLib/LJCDocObjLib/Diagrams/DataPropertyToExample.html
+++ b/CoreUtilities/LJCDocLib/LJCDocObjLib/Diagrams/DataPropertyToExample.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html>
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
 <!-- DataPropertyToExample.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
@@ -17,6 +19,12 @@
     <br />
     <img src="DataPropertyToExample.jpg" width="700" />
     <br />
+  </div>
+  <br />
+  <div class='SmallText'>
+    DataPropertyToExample<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
   </div>
 </body>
 </html>
