--- a/CoreUtilities/LJCDocLib/LJCDocXMLObjLib/Diagrams/DocXML.html
+++ b/CoreUtilities/LJCDocLib/LJCDocXMLObjLib/Diagrams/DocXML.html
@@ -18,6 +18,10 @@
   <br />
   <img src="DocXML.jpg" width="700" />
   <br />
-  <div class='SmallText'>Copyright &copy; Lester J. Clark 2021,2022 - All Rights Reserved</div>
+  <div class='SmallText'>
+    DocXML<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </div>
 </body>
 </html>
