--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <div class='Text'>
       <p>Lester J. Clark C# Assemblies</p>
       <p>
+        Tutorial on how to use the
+        <a href="HowToUseLJCProjects.html">LJCProjects</a> code.
+      </p>
+      <p>
         The LJC Libraries, Utilities and Application source code is in GitHub at
         <a href="https://github.com/ljlclark/LJCProjects">LJC C# Projects</a>
       </p>
