--- a/HowToUseLJCProjects.html
+++ b/HowToUseLJCProjects.html
@@ -31,7 +31,7 @@
         of the green "Code" button.
       </p>
       <p>
-        Then select the "Download Zip"" menu item. You may have to scroll down
+        Then select the "Download Zip" menu item. You may have to scroll down
         to get to the menu item.
       </p>
       <p>
@@ -41,7 +41,7 @@
       <p>
         You do not have to unzip the entire downloaded file. Instead, you can
         copy only the projects you wish to use. Just double-click your left
-        mouse button on the zip file and a virtual folder will be displayed.
+        mouse button on the zip file and a virtual ZIP folder will be displayed.
       </p>
       <p>
         Create the folder path where you want copy your local code and copy
@@ -52,14 +52,16 @@
         will have to modify the command files.
       </p>
       <p>
-        It is recommended to start by copying the CoreUtilities\LJCNetCommon
-        folder and subfolders as this assembly is used in almost all other
-        assemblies. This project creates the ".NET Common Library".
-      </p>
-      <p>
         Copy at a minimum the following files from the virtual ZIP root folder
         to your root folder: BuildAll.cmd, ClearBuild.cmd, ClearBuildDetail.cmd,
         LICENSE, README.md, SetupFolder.cmd, SetupUpdate.cmd and UpdateAll.cmd.
+      </p>
+      <p>
+        It is recommended to start by copying the following project folders and
+        subfolders: CoreUtilities\LJCNetCommon, CoreUtilities\LJCDataAccessConfig
+        and CoreUtilities\LJCDataAccess.The LJCNetCommon assembly is used in
+        almost all other assemblies and creates the ".NET Common Library". The
+        other two provide for ADO.NET Data Access.
       </p>
       <p>
         Now just double-click your left mouse button on BuildAll.cmd in your
@@ -68,7 +70,8 @@
       <h3>Technical Documentation</h3>
       <p>
         The <a href="https://ljlclark.github.io/LJCCodeDoc/">
-        Technical Documentation</a> can be used for more information on each
+          Technical Documentation
+        </a> can be used for more information on each
         assembly.
       </p>
       <p>
