--- a/HowToUseLJCProjects.html
+++ b/HowToUseLJCProjects.html
@@ -61,7 +61,8 @@
         subfolders: CoreUtilities\LJCNetCommon, CoreUtilities\LJCDataAccessConfig
         and CoreUtilities\LJCDataAccess.The LJCNetCommon assembly is used in
         almost all other assemblies and creates the ".NET Common Library". The
-        other two provide for ADO.NET Data Access.
+        other two create the "Data Access Configuration Library" and "ADO.NET
+        Data Access Library".
       </p>
       <p>
         Now just double-click your left mouse button on BuildAll.cmd in your
