--- a/HowToUseLJCProjects.html
+++ b/HowToUseLJCProjects.html
@@ -27,7 +27,7 @@
         <a href="https://github.com/ljlclark/LJCProjects">LJCProjects</a>.
       </p>
       <p>
-        On the LJCProjects repository page in GitHub, click on the dropdown icon
+        At the LJCProjects repository page in GitHub, click on the dropdown icon
         of the green "Code" button.
       </p>
       <p>
