--- a/HowToUseLJCProjects.html
+++ b/HowToUseLJCProjects.html
@@ -65,11 +65,13 @@
   LJCDataAccess.        ADO.NET Data Access Library</pre> 
       </p>
       <p>
-        Copy the "Libraries" folder from CoreAssemblies if you are going to
-        develop with WinForms. This project builds the following assemblies:
+        Copy the "Libraries" and LJCGridDataLib folders from CoreAssemblies if
+        you are going to develop with WinForms. These projects build the
+        following assemblies:
         <pre>
   LJCWinFormCommon      WinForm Common Library
   LJCWinFormControls    WinForm Control Library
+  LJCGridDataLib        Grid Helper Library
 </pre>
       </p>
       <p>
