--- a/HowToUseLJCProjects.html
+++ b/HowToUseLJCProjects.html
@@ -46,10 +46,13 @@
       <p>
         Create the folder path where you want copy your local code and copy
         what you want from the virtual ZIP folder. You will find it easier if
-        you use the root path "c:\Documents\Visual Studio 2022\LJCProjects".
-        You must use the same subfolders as in the virtual directory for the
-        command files to work correctly. If either of these is different, you
-        will have to modify the command files.
+        you use the root path
+        "c:\Users\YourUserName\Documents\Visual Studio 2022\LJCProjects".
+      </p>
+      <p>
+        You should use the same subfolders as in the virtual directory for the
+        command files to work correctly. If your subfolders from LJCProjects on
+        down are different, you will have to modify the command files.
       </p>
       <p>
         Copy at a minimum the following files from the virtual ZIP root folder
@@ -62,7 +65,7 @@
         <pre>
   LJCNetCommon          .NET Common Library
   LJCDataAccessConfig   Data Access Configuration Library
-  LJCDataAccess.        ADO.NET Data Access Library</pre> 
+  LJCDataAccess.        ADO.NET Data Access Library</pre>
       </p>
       <p>
         Copy the "Libraries" and LJCGridDataLib folders from CoreAssemblies if
