--- a/HowToUseLJCProjects.html
+++ b/HowToUseLJCProjects.html
@@ -65,15 +65,16 @@
         <pre>
   LJCNetCommon          .NET Common Library
   LJCDataAccessConfig   Data Access Configuration Library
-  LJCDataAccess.        ADO.NET Data Access Library</pre>
+  LJCDataAccess         ADO.NET Data Access Library</pre>
       </p>
       <p>
-        Copy the "Libraries" and LJCGridDataLib folders from CoreAssemblies if
-        you are going to develop with WinForms. These projects build the
-        following assemblies:
+        Copy the "Libraries" and the following project folders and subfolders
+        from CoreAssemblies if you are going to develop with WinForms. These
+        projects build the following assemblies:
         <pre>
   LJCWinFormCommon      WinForm Common Library
   LJCWinFormControls    WinForm Control Library
+  LJCDBMessage          Data Message Library
   LJCGridDataLib        Grid Helper Library
 </pre>
       </p>
