--- a/HTML/HowToUseLJCProjects.html
+++ b/HTML/HowToUseLJCProjects.html
@@ -10,15 +10,20 @@
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
-  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../CSS/CodeDoc.css' />
 </head>
 <body>
   <div class="page">
     <br />
+    <div class="PathText">
+      / <a href="../index.html">Home</a>
+      / <a href="Tutorials.html">HowTo</a>
+      / Code
+    </div>
+    <br />
     <div id='Header'>
       <div id='Title'>How to Use LJCProjects</div>
     </div>
-    <br />
     <div class='Text'>
       <h3>Getting the Project Code</h3>
       <p>
