--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright (c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
+<!-- index.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
   <title>LJC Assemblies</title>
@@ -17,12 +18,10 @@
     <div id='Header'>
       <div id='Title'>LJC Assemblies</div>
     </div>
-    <br />
     <div class='Text'>
       <p>Lester J. Clark C# Assemblies</p>
       <p>
-        Tutorial on how to use the
-        <a href="HowToUseLJCProjects.html">LJCProjects</a> code.
+        <a href="HTML/Tutorials.html">LJCProjects "How To..."</a> 
       </p>
       <p>
         The LJC Libraries, Utilities and Application source code is in GitHub at
