--- a/HTML/ConfigDataAccessWithBuilder.html
+++ b/HTML/ConfigDataAccessWithBuilder.html
@@ -72,7 +72,7 @@
   <span class='commonType'>var</span> providerName = "MySql.Data.MySqlClient";</pre>
 
       <h4>
-        The following are possible connection strings based on web searches. See your provider documentation for the latest information.
+        The following are possible <a href="https://www.connectionstrings.com/sql-server/">Connection Strings</a>. See your provider documentation for the latest information.
       </h4>
 
       <!-- *********** -->
