--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -35,7 +35,7 @@
       </p>
       <p>
         How to Configure DataAccess using
-        <a href="ConfigDataAccessWithConfigs.html">Configs</a>.
+        <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
