--- a/HTML/ConfigDataAccessWithConfigs.html
+++ b/HTML/ConfigDataAccessWithConfigs.html
@@ -4,7 +4,7 @@
 <!-- ConfigDataAccessWithConfigs.html -->
 <html lang="en">
 <head>
-  <title>Config DataAccess with Configs</title>
+  <title>Config DataAccess with DataConfigs</title>
   <meta charset='utf-8' />
   <meta name="description" content="How to Use LJCProjects">
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
@@ -23,22 +23,28 @@
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>How to Configure DataAccess with Configs</div>
+      <div id='Title'>How to Configure DataAccess with DataConfigs</div>
     </div>
     <div class='Text'>
       <p>
         The LJCDataAccess.DataAccess class is capable of connecting using the SQL
         Server data provider, OLEDB driver, ODBC driver or MySQL data provider.
       </p>
+      <p>
+        DataAccess configurationin can be defined externally in file DataConfigs.xml
+      </p>
+      <p>
+        This is an example of a DataConfigs.xml file.
+      </p>
       <pre>
 <span class="ltgt"><</span>?<span class="name"><span class="ltgt"><</span>xml</span><span class="attrib"> version</span>="1.0" ?<span class="ltgt">></span>
 <span class="name"><span class="ltgt"><</span>DataConfigs</span><span class="ltgt">></span><span class="attrib"> xmlns:xsi</span>="http://www.w3.org/2001/XMLSchema-instance"
              <span class="attrib"> xmlns:xsd</span>="http://www.w3.org/2001/XMLSchema"<span class="ltgt">></span>
   <span class="name"><span class="ltgt"><</span>DataConfig</span><span class="ltgt">></span>;
-  <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>ConfigName<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-  <span class="name"><span class="ltgt"><</span>ConnectionTypeName</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
-  <span class="name"><span class="ltgt"><</span>DbServer</span><span class="ltgt">></span>DataServiceName<span class="name"><span class="ltgt"><</span>/DbServer_ne                   
-  <span class="name"><span class="ltgt"><</span>Database</span><span class="ltgt">></span>DatabaseName<span class="name"><span class="ltgt"><</span>/Database</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>Name</span><span class="ltgt">></span>ConfigName<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>ConnectionTypeName</span><span class="ltgt">></span>SQLServer<span class="name"><span class="ltgt"><</span>/Name</span><span class="ltgt">></span>
+    <span class="name"><span class="ltgt"><</span>DbServer</span><span class="ltgt">></span>DataServiceName<span class="name"><span class="ltgt"><</span>/DbServer_ne                   
+    <span class="name"><span class="ltgt"><</span>Database</span><span class="ltgt">></span>DatabaseName<span class="name"><span class="ltgt"><</span>/Database</span><span class="ltgt">></span>
   <span class="name"><span class="ltgt"><</span>/DataConfig</span><span class="ltgt">></span>
 <span class="name"><span class="ltgt"><</span>/DataConfigs</span><span class="ltgt">></span></pre>
     </div>
